infra/overlays/production/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
