infra/overlays/production/hodl-backend.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hodl-backend
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
