infra/overlays/production/hodl-web.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hodl-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    spec:
      containers:
        - name: hodl-web
